# publishing-service

./: .env.example  .gitignore  PINCLICKS_AUDIT.md  README.md  _module_shim.py  app.py  build_theme.py  bulk_ui.py  docker-compose.dev.yml  docker-compose.yml  engine_config.py  generated_theme.html  generators.py  implementation_plan.md  nginx.conf  pinclicks_analysis.py  pinclicks_scraper.py  pinterest_analysis.py  pinterest_bulk_upload_the_sunday_patio.csv  pinterest_bulk_upload_the_weekend_folio.csv  pinterest_bulk_upload_your_midnight_desk.csv  pinterest_design.py  pinterest_engine.py  pinterest_exporter.py  pinterest_file_parser.py  pinterest_models.py  pinterest_scraper.py  pinterest_trends_analysis.py  pinterest_trends_scraper.py  pyproject.toml  requirements.txt  scraper_subprocess.py  single_article_flow.py  uploader.py  validator.py  wp_onboarding.py
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ab1f860c53b8_add_new_columns_and_tables_for_m1.py  ebd467d9f074_add_pipeline_configs_table.py
backend/app/: crypto.py  main.py
backend/tests/: conftest.py  helpers.py  test_article_api.py  test_article_generator.py  test_article_validator.py  test_articles.py  test_blogs.py  test_bulk_pipeline.py  test_category_resolver.py  test_celery_app.py  test_concrete_providers.py  test_cors_schema_fixes.py  test_credentials.py  test_cross_area_and_nfr.py  test_crypto.py  test_csv_exporter.py  test_database.py  test_health.py  test_image_generator.py  test_keyword_analyzer.py  test_pipeline_configs.py  test_pipeline_tasks.py  test_provider_abcs.py  test_provider_factory.py  test_publisher.py  test_run_api.py  test_runs.py  test_single_article_pipeline.py
(+198 files in other folders)
