[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automating-wf"
version = "0.1.0"
description = "Pinterest -> PinClicks -> WordPress automation workflows."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pinterest-engine = "automating_wf.engine.pipeline:main"
wp-onboarding = "automating_wf.wordpress.onboarding:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
