[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "publishing-service-backend"
version = "0.1.0"
description = "FastAPI backend for the publishing service."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "cryptography>=42.0,<44.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "celery[redis]>=5.3,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.9,<2.0",
    "ruff>=0.3,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 120
